bk_ida/gccida/g0/find_reloads_address_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5627:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5632:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5642:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5644:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v19; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5645:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v20; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5647:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5648:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v23; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5649:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v24; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5650:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v25; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5651:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v26; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5652:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5653:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v30; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5655:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v32; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5656:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v33; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5663:4: error: expected ';' after expression
rtx xa; // [rsp+10h] [rbp-E0h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5663:5: error: use of undeclared identifier 'xa'
rtx xa; // [rsp+10h] [rbp-E0h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5665:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+1Ch] [rbp-D4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5666:4: error: expected ';' after expression
rtx tem_0; // [rsp+28h] [rbp-C8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/reload.c:5666:5: error: use of undeclared identifier 'tem_0'
rtx tem_0; // [rsp+28h] [rbp-C8h] BYREF 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reloads_address_1/src/obj/reload.o] Error 1
